--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,14 @@
   margin: 50px auto; }
 
 .masthead {
-  position: absolute;
+  position: fixed;
   min-height: 3.75em;
   background-color: #2f3338;
+  width: 100%;
   top: 0;
-  width: 100%; }
+  left: 0; }
+  .masthead.absolute {
+    position: absolute; }
   .masthead .masthead__logo {
     max-width: 12.5em;
     margin: 0;
@@ -54,7 +57,7 @@
 
 .menu.active,
 .js .menu > ul ul.active {
-  max-height: 55em; }
+  max-height: 125em; }
 
 .menu ul {
   margin: 0;
